[package]
name = "swap-and-match-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enumset = "1.0.7"
bitvec = "1.0.0"
_serde = { package = "serde", version = "1.0.129", default-features = false, optional = true }

[features]
serde = ["_serde", "bitvec/serde", "enumset/serde"]