[package]
name = "swap-and-match-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
_serde = { package = "serde", version = "1.0.164", default-features = false, optional = true }

[features]
serde = ["_serde"]